# ChangeLog for dev-perl/DateTime
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/DateTime/ChangeLog,v 1.5 2004/06/25 00:21:40 agriffis Exp $

  08 Jun 2004; David Holm <dholm@gentoo.org> DateTime-0.21.ebuild:
  Added to ~ppc.

*DateTime-0.21 (05 Jun 2004)

  05 Jun 2004; Michael Cummings <mcummings@gentoo.org> DateTime-0.21.ebuild:
  new version on cpan

  07 May 2004; Gustavo Zacarias <gustavoz@gentoo.org> DateTime-0.20.ebuild:
  Keyworded sparc

*DateTime-0.20 (04 Mar 2004)

  04 Mar 2004; Michael Cummings <mcummings@gentoo.org> DateTime-0.20.ebuild,
  metadata.xml:
  Dep for gwine, bug 27301
