@@ -1,0 +1,22 @@
+# Copyright 1999-2004 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/DateTime/DateTime-0.22.ebuild,v 1.1 2004/07/30 11:24:11 mcummings Exp $
+
+inherit perl-module
+
+DESCRIPTION="A date and time object"
+HOMEPAGE="http://search.cpan.org/~drolsky/${P}/"
+SRC_URI="http://search.cpan.org/CPAN/authors/id/D/DR/DROLSKY/${P}.tar.gz"
+
+LICENSE="GPL-2"
+SLOT="0"
+KEYWORDS="~x86 ~sparc ~ppc"
+IUSE=""
+
+SRC_TEST="do"
+
+DEPEND=">=dev-perl/Params-Validate-0.72
+		dev-perl/Time-Local
+		>=dev-perl/DateTime-TimeZone-0.27
+		>=dev-perl/DateTime-Locale-0.09
+		dev-perl/Class-Factory-Util"
