@@ -1,6 +1,8 @@
+MD5 ae6158231ac35f69c5cd7b2e6777cb35 ChangeLog 802
 MD5 8328dd48a100a80d7e20cc316482fd19 DateTime-0.20.ebuild 609
-MD5 ed06567fc3006ab63d902851cd5b6c00 ChangeLog 670
-MD5 e2d8f1bf77722def1dd432e26455c818 metadata.xml 305
 MD5 74fe4d35b1bba6a0a8b2ff2be7ddc642 DateTime-0.21.ebuild 645
+MD5 e2d8f1bf77722def1dd432e26455c818 metadata.xml 305
+MD5 73662aadc0a00ac35e5b6663d8780e26 DateTime-0.22.ebuild 646
 MD5 ccdd957266e3fce31d460aeb9c7b60ba files/digest-DateTime-0.20 64
 MD5 3871a45b77c0a2bd97a76914dfe68c4c files/digest-DateTime-0.21 64
+MD5 d7c7660dc0f548de6f62457d363ecd58 files/digest-DateTime-0.22 64
