@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/DateTime
 # Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/DateTime/ChangeLog,v 1.5 2004/06/25 00:21:40 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/DateTime/ChangeLog,v 1.6 2004/07/30 11:24:11 mcummings Exp $
+
+*DateTime-0.22 (30 Jul 2004)
+
+  30 Jul 2004; Michael Cummings <mcummings@gentoo.org> +DateTime-0.22.ebuild:
+  New version on CPAN
 
   08 Jun 2004; David Holm <dholm@gentoo.org> DateTime-0.21.ebuild:
   Added to ~ppc.
